fix: alignment of logo in footer

--- a/src/app/components/Footer/Footer.styles.module.css
+++ b/src/app/components/Footer/Footer.styles.module.css
@@ -13,6 +13,7 @@
     font-size: var(--font-size-lg);
     font-weight: var(--font-weight-bold);
     color: white;
+    white-space: nowrap;
 }
 
 .StyledInputBox {
@@ -87,6 +88,8 @@
 
 }
 
+
+
 .StyledFooterBody {
     display: flex;
     flex-direction: column;
@@ -155,6 +158,10 @@
 .StyledActionAndNewsletterWrapper {
     flex-direction: row;
     align-items: center;
+}
+
+.StyledImage { 
+    align-self: center;
 }
     
 }
